--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html><html lang="en">
   <head>
-    <title>30DaysOfScript:Inline Script</title>
+    <title>JS</title>
   </head>
   <body>
-    <button onclick="alert('Welcome to 30DaysOfJavaScript!')">Click Me</button>
+    <h1>Curso Java Script</h1>
+    <script src="je1.js"></script>
   </body>
 </html>
