--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1>Curso Java Script</h1>
-    <script src="je1.js"></script>
+    <h2 id="mensaje" ></h2>
+    <p id="chiste"></p>
+    <script src="mensaje.js"></script>
   </body>
 </html>
